force-app/main/default/objects/Flusso_Fatture__c/Flusso_Fatture__c.object-meta.xml
<CustomObject>
    <label>Flusso Fatture</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Flusso Fatture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flusso Fatture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>