force-app/main/default/objects/Flusso_Fatture__c/fields/Data_Pubblicazione__c.field-meta.xml
<CustomField>
    <fullName>Data_Pubblicazione__c</fullName>
    <label>Data Pubblicazione</label>
    <type>Date</type>
</CustomField>