force-app/main/default/objects/Flusso_Fatture__c/fields/ID_Flusso__c.field-meta.xml
<CustomField>
    <fullName>ID_Flusso__c</fullName>
    <externalId>true</externalId>
    <label>ID_Flusso</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>