force-app/main/default/objects/Flusso_Fatture__c/fields/Numero_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Numero_Fatture__c</fullName>
    <label>Numero Fatture</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>